--- a/webappsvr/webapptest.csproj
+++ b/webappsvr/webapptest.csproj
@@ -5,5 +5,8 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="9.0.6" />
+  </ItemGroup>
 
 </Project>
