--- a/webappclient/package.json
+++ b/webappclient/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "build:dotnet": "ng build && npm run copy:dist",
+    "builddev:dotnet": "ng build --configuration development && npm run copy:dist",
     "copy:dist": "rm -rf ../webappsvr/wwwroot/* && mkdir -p ../webappsvr/wwwroot && cp -r dist/webappclient/browser/* ../webappsvr/wwwroot/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -18,6 +19,8 @@
     "@angular/forms": "^20.0.0",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "@azure/msal-angular": "^4.0.14",
+    "@azure/msal-browser": "^4.14.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
