--- a/webappclient/package.json
+++ b/webappclient/package.json
@@ -3,9 +3,12 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "prestart": "node update-env.js",
     "start": "ng serve",
+    "prebuild": "node update-env.js",
     "build": "ng build",
     "build:dotnet": "ng build && npm run copy:dist",
+    "prebuilddev:dotnet": "node update-env.js",
     "builddev:dotnet": "ng build --configuration development && npm run copy:dist",
     "copy:dist": "rm -rf ../webappsvr/wwwroot/* && mkdir -p ../webappsvr/wwwroot && cp -r dist/webappclient/browser/* ../webappsvr/wwwroot/",
     "watch": "ng build --watch --configuration development",
@@ -29,6 +32,7 @@
     "@angular/cli": "^20.0.2",
     "@angular/compiler-cli": "^20.0.0",
     "@types/jasmine": "~5.1.0",
+    "dotenv": "^17.0.1",
     "jasmine-core": "~5.7.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
