--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "update-env": "node update-env.js",
     "reset-env": "node reset-env.js",
-    "prepare-commit": "npm run reset-env",
+    "prepare-commit": "npm --prefix ./webappclient run reset-env",
     "prepare": "husky install 2>/dev/null || true"
   },
   "devDependencies": {
